Support additional user-provided instances
Example (for Apple HAP):

```c
const struct mgos_dns_sd_txt_entry gizmo_txt[] = {
    {.key = "c#", .value = "1"},
    {.key = "ff", .value = "0"},
    {.key = "pv", .value = "1.0"},
    {.key = "id", .value = "11:22:33:44:55:66"},
    {.key = "md", .value = "Fancy Gizmo 9000"},
    {.key = "s#", .value = "1"},
    {.key = "sf", .value = "1"},
    {.key = "ci", .value = "8"},  // Switch
    {.key = NULL},
};
mgos_dns_sd_add_service_instance("gizmo9000", "_hap._tcp", 8080, gizmo_txt);
```

CL: dns-sd: Support additional user-provided instances

--- a/mos.yml
+++ b/mos.yml
@@ -1,7 +1,7 @@
 author: mongoose-os
 description: Implements DNS-SD protocol
 type: lib
-version: 1.0
+version: 1.1.0
 
 platforms: ["esp32", "esp8266"]
 
@@ -23,6 +23,7 @@ libs:
 
 init_after:
   - ethernet
+  - http-server
   - wifi
 
 cdefs:
