--- a/mos.yml
+++ b/mos.yml
@@ -16,7 +16,7 @@ config_schema:
   - ["dns_sd.txt", "s", "", {title: "Extra comma-separated key=value pairs to put into the TXT service record"}]
 
 libs:
-  - origin: https://github.com/mongoose-os-libs/mongoose
+  - location: https://github.com/mongoose-os-libs/mongoose
 
 init_after:
   - ethernet
